--- a/MoversEditor/FileNotFoundForm.fr.resx
+++ b/MoversEditor/FileNotFoundForm.fr.resx
@@ -117,22 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="bt_retry.Text" xml:space="preserve">
+  <data name="btnRetry.Text" xml:space="preserve">
     <value>Réessayer</value>
   </data>
-  <data name="bt_cancel.Text" xml:space="preserve">
+  <data name="btnCancel.Text" xml:space="preserve">
     <value>Annuler</value>
   </data>
+  <data name="btnSettings.Text" xml:space="preserve">
+    <value>Paramètres</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="bt_settings.Location" type="System.Drawing.Point, System.Drawing">
-    <value>158, 64</value>
-  </data>
-  <data name="bt_settings.Size" type="System.Drawing.Size, System.Drawing">
-    <value>119, 23</value>
-  </data>
-  <data name="bt_settings.Text" xml:space="preserve">
-    <value>Ouvrir les paramètres</value>
-  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAvgAAAAEAIAAoEAMAFgAAACgAAAC+AAAAAAIAAAEAIAAAAAAAAPgCAMMOAADDDgAAAAAAAAAA
